--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
     color: #333;
     line-height: 1.6;
 }
+.mainbody {
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    padding: 15px
+}
 
 /* Default container styling */
 .container {
@@ -21,38 +27,27 @@ body {
 }
 
 /* Default header styling */
-header {
+.header {
     background: #333;
     color: #fff;
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #77aaff 3px solid;
+    text-align: center;
 }
 
-header a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-}
-
-header ul {
-    padding: 0;
-    list-style: none;
-}
-
-header li {
-    display: inline;
-    padding: 0 20px 0 20px;
-}
 
 /* Default footer styling */
-footer {
+.footer {
     background: #333;
     color: #fff;
     text-align: center;
     padding: 30px;
     margin-top: 30px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Utility classes */
